--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <base href="/" />
-    <title>Angular 10</title>
+    <title>MEAN Manager</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- bootstrap css -->
